# statCull

./: .gitignore  README.md  environment.yml  pyproject.toml
src/: cli.py  core.py
src/statCull.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
